--- a/index.html
+++ b/index.html
@@ -270,43 +270,56 @@
   });
 
   // Handle submit
-  document.getElementById('submitBtn').addEventListener('click', async () => {
-    // Send the selected answers to the backend
-    try {
-      const response = await fetch('http://127.0.0.1:5000/survey', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(selectedAnswers)
+document.getElementById('submitBtn').addEventListener('click', async () => {
+  try {
+    // Send the survey data to the backend
+    const surveyResponse = await fetch('http://127.0.0.1:5000/survey', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(selectedAnswers)
+    });
+
+    if (surveyResponse.ok) {
+      console.log('Survey submitted successfully:', selectedAnswers);
+
+      // Fetch pregenerated questions from the backend
+      const questionResponse = await fetch('http://127.0.0.1:5000/pregenerated-questions');
+      const questionData = await questionResponse.json();
+
+      // Populate pregenerated questions
+      const questionContainer = document.getElementById('pregenerated-questions');
+      questionContainer.innerHTML = '';
+      questionData.questions.forEach(question => {
+        const button = document.createElement('button');
+        button.textContent = question;
+        button.classList.add('question-button');
+        questionContainer.appendChild(button);
       });
 
-      if (response.ok) {
-        console.log('Survey submitted successfully:', selectedAnswers);
+      // Fetch paper titles from the backend
+      const paperResponse = await fetch('http://127.0.0.1:5000/papers');
+      const paperData = await paperResponse.json();
 
-        // Fetch pregenerated questions from backend
-        const questionResponse = await fetch('http://127.0.0.1:5000/pregenerated-questions');
-        const questionData = await questionResponse.json();
+      // Populate paper titles
+      const paperList = document.querySelector('.paper-list ul');
+      paperList.innerHTML = '';
+      paperData.papers.forEach(title => {
+        const listItem = document.createElement('li');
+        listItem.textContent = title;
+        paperList.appendChild(listItem);
+      });
 
-        // Populate the pregenerated questions
-        const questionContainer = document.getElementById('pregenerated-questions');
-        questionContainer.innerHTML = '';
-        questionData.questions.forEach(question => {
-          const button = document.createElement('button');
-          button.textContent = question;
-          button.classList.add('question-button');
-          questionContainer.appendChild(button);
-        });
-
-        document.getElementById('page1').classList.remove('active');
-        document.getElementById('page2').classList.add('active');
-      } else {
-        console.error('Failed to submit survey:', await response.text());
-      }
-    } catch (err) {
-      console.error('Error submitting survey:', err);
+      // Switch to results page
+      document.getElementById('page1').classList.remove('active');
+      document.getElementById('page2').classList.add('active');
+    } else {
+      console.error('Failed to submit survey:', await surveyResponse.text());
     }
-  });
+  } catch (err) {
+    console.error('Error submitting survey:', err);
+  }
+});
+
 </script>
 
 </body>
