fixed wrong merge, added chatbot context again

--- a/index.html
+++ b/index.html
@@ -336,6 +336,20 @@
       const responseData = await surveyResponse.json();
       console.log("✅ Survey submitted successfully:", responseData);
 
+          // POST survey data to the backend
+      fetch("http://127.0.0.1:5001/survey", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(surveyData),
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          console.log("✅ Survey Submission Response:", data); // Debug log
+        })
+        .catch((error) => {
+          console.error("❌ Error submitting survey data:", error);
+        });
+
       // 3a. Fetch pregenerated questions
       const questionResponse = await fetch('http://127.0.0.1:5000/pregenerated-questions');
       const questionData = await questionResponse.json();
@@ -385,7 +399,7 @@
 
 
   // ~~~ The new Chat functionality remains unchanged below ~~~
-  const API_BASE_URL = "http://127.0.0.1:5000"; // for the /chat endpoint
+  const API_BASE_URL = "http://127.0.0.1:5001"; // for the /chat endpoint
   const chatTextarea = document.querySelector('.chat-box textarea');
   const messagesDiv = document.createElement('div');
   messagesDiv.classList.add('messages');
