--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EcoHack App</title>
+  <title>FarmGuide App</title>
   <style>
     /* General Reset */
     body {
@@ -238,7 +238,7 @@
 </div>
 
 <div class="container page" id="page2">
-  <h1>EcoHack Results</h1>
+  <img src="images/logo.png" alt="FarmGuide Logo" style="width:100%; height:auto;">
 
   <!-- Paper Titles -->
   <div class="paper-list">
