--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 </div>
 
 <div class="container page" id="page2">
-  <img src="images/logo.png" alt="EcoHack results Image" style="width:100%; height:auto;">
+  <h1>EcoHack Results</h1>
 
   <!-- Paper Titles -->
   <div class="paper-list">
